# rayovin-agent

./: .env.example  .envrc  .hadolint.yaml  AGENTS.md  CONTRIBUTING.es.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.es.md  README.md  README.ur-pk.md  README.zh-CN.md  SECURITY.es.md  SECURITY.md  batch_runner.py  cli.py  constraints-termux.txt  docker-compose.windows.yml  docker-compose.yml  mcp_serve.py  mini_swe_runner.py  model_tools.py  package-lock.json  package.json  pyproject.toml  rayovin-already-has-routines.md  rayovin_bootstrap.py  rayovin_constants.py  rayovin_logging.py  rayovin_state.py  rayovin_time.py  run_agent.py  setup-rayovin.sh  setup.py  test-rayovin.sh  toolsets.py  trajectory_compressor.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.plans/: openai-api-server.md  streaming-support.md
acp_adapter/: __init__.py  auth.py  entry.py  events.py  permissions.py  provenance.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: account_usage.py  agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  azure_identity_adapter.py  background_review.py  bedrock_adapter.py  billing_view.py  bounded_response.py  browser_provider.py  browser_registry.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  coding_context.py  context_compressor.py  context_engine.py  context_references.py  conversation_compression.py  conversation_loop.py  copilot_acp_client.py  credential_persistence.py  credential_pool.py  credential_sources.py  credits_tracker.py  curator.py  curator_backup.py  display.py  error_classifier.py  file_safety.py  gemini_native_adapter.py  gemini_schema.py  i18n.py  image_gen_provider.py  (+55 more)
apps/hermes-launcher/: Cargo.toml
apps/hermes-launcher/src/: main.rs  services.rs
(+3635 files in other folders)
